opam-version: "2.0"
name:         "decompress"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/decompress"
bug-reports:  "https://github.com/mirage/decompress/issues"
dev-repo:     "git+https://github.com/mirage/decompress.git"
doc:          "https://mirage.github.io/decompress/"
license:      "MIT"
synopsis:     "Implementation of Zlib in OCaml"
description: """Decompress is an implementation of Zlib in OCaml

It provides a pure non-blocking interface to inflate and deflate data flow.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"       {build}
  "base-bytes"
  "bigarray-compat"
  "mmap"
  "optint"
  "checkseum"
  "camlzip"    {with-test & >= "1.07"}
  "re"         {with-test & >= "1.7.2"}
  "alcotest"   {with-test}
  "bos"        {with-test}
  "cmdliner"
]
