opam-version: "2.0"
name:         "decompress"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/decompress"
bug-reports:  "https://github.com/mirage/decompress/issues"
dev-repo:     "git+https://github.com/mirage/decompress.git"
doc:          "https://mirage.github.io/decompress/"
license:      "MIT"
synopsis:     "Implementation of Zlib and GZip in OCaml"
description: """Decompress is an implementation of Zlib and GZip in OCaml

It provides a pure non-blocking interface to inflate and deflate data flow.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "base-bytes"
  "bigarray-compat"
  "cmdliner"
  "optint"      {>= "0.0.4"}
  "checkseum"   {>= "0.2.0"}
  "bigstringaf" {with-test}
  "alcotest"    {with-test}
  "ctypes"      {with-test & >= "0.18.0"}
  "fmt"         {with-test}
  "camlzip"     {>= "1.10" & with-test}
  "base64"      {>= "3.0.0" & with-test}
]
