opam-version: "2.0"
name:         "decompress"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/decompress"
bug-reports:  "https://github.com/mirage/decompress/issues"
dev-repo:     "git+https://github.com/mirage/decompress.git"
doc:          "https://mirage.github.io/decompress/"
license:      "MIT"
synopsis:     "Implementation of Zlib and GZip in OCaml"
description: """Decompress is an implementation of Zlib and GZip in OCaml

It provides a pure non-blocking interface to inflate and deflate data flow.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "cmdliner"    {>= "1.1.0"}
  "optint"      {>= "0.1.0"}
  "checkseum"   {>= "0.2.0"}
  "bigstringaf" {with-test}
  "alcotest"    {with-test}
  "fmt"         {with-test & >= "0.8.7"}
  "camlzip"     {>= "1.10" & with-test}
  "base64"      {>= "3.0.0" & with-test}
  "crowbar"     {with-test & >= "0.2"}
  "rresult"     {with-test}
  "bos"         {with-test}
  "astring"     {with-test}
]
