opam-version: "1.2"
name:         "rfc1951"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/decompress"
bug-reports:  "https://github.com/mirage/decompress/issues"
dev-repo:     "https://github.com/mirage/decompress.git"
doc:          "https://mirage.github.io/decompress/"
license:      "MIT"

build: [
  [ "dune" "subst" "--only-packages" name "--root" "." "-j" jobs ]
  [ "dune" "build" "--only-packages" name "--root" "." "-j" jobs ]
]
build-test: [[ "dune" "runtest" "--only-packages" name "--root" "." "-j" jobs ]]

depends: [
  "jbuilder"   {build}
  "base-bytes"
  "base-bigarray"
  "optint"
  "checkseum"
  "camlzip"    {test}
  "re"         {test & >= "1.7.2"}
  "alcotest"   {test}
]

available: [ocaml-version >= "4.03.0"]
