opam-version: "2.0"
name:         "rfc1951"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/decompress"
bug-reports:  "https://github.com/mirage/decompress/issues"
dev-repo:     "git+https://github.com/mirage/decompress.git"
doc:          "https://mirage.github.io/decompress/"
license:      "MIT"
synopsis:     "Implementation of RFC1951 in OCaml"
description: """This package provide an implementation of RFC1951 in OCaml.

We provide a pure non-blocking interface to inflate and deflate data flow.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.07.0"}
  "dune"
  "decompress" {= version}
]
