(library
 (name de)
 (public_name decompress.de)
 (modules de)
 (libraries checkseum bigarray-compat))

(library
 (name rfc1951)
 (public_name rfc1951)
 (modules de)
 (libraries checkseum bigarray-compat))

(library
 (name zl)
 (public_name decompress.zl)
 (modules zl)
 (libraries de))

(library
 (name gz)
 (public_name decompress.gz)
 (modules gz)
 (libraries de))
